--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Investimento Seguro e Lucrativo - André Ricardo Carvalho</title>
+    <title>2025</title>
     <style>
         * {
             margin: 0;
