--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>2025</title>
+    <title>Investimento Seguro e Lucrativo - André Ricardo Carvalho</title>
     <style>
         * {
             margin: 0;
@@ -851,8 +851,11 @@
                 
                 <p>Este material não foi preparado de acordo com os requisitos legais destinados a promover a independência da pesquisa de investimentos e não está sujeito a qualquer proibição de negociação antes da disseminação da pesquisa de investimentos. Qualquer decisão de investimento deve ser baseada nas informações contidas nos documentos oficiais relevantes e não deve ser baseada apenas neste material.</p>
             </div>
+		<div style="text-align: center; margin: 20px;">
+        <a href="terms.html" style="color: red; display: block; margin: 10px 0;">terms</a>
+        <a href="privacy.html" style="color: red; display: block; margin: 10px 0;">privacy</a>
         </section>
-
+	
         <!-- Floating Action Button -->
         <div class="floating-action">
             <button onclick="openwe()" class="floating-btn">
