--- a/index.html
+++ b/index.html
@@ -852,8 +852,8 @@
                 <p>Este material não foi preparado de acordo com os requisitos legais destinados a promover a independência da pesquisa de investimentos e não está sujeito a qualquer proibição de negociação antes da disseminação da pesquisa de investimentos. Qualquer decisão de investimento deve ser baseada nas informações contidas nos documentos oficiais relevantes e não deve ser baseada apenas neste material.</p>
             </div>
 		<div style="text-align: center; margin: 20px;">
-        <a href="terms.html" style="color: red; display: block; margin: 10px 0;">terms</a>
-        <a href="privacy.html" style="color: red; display: block; margin: 10px 0;">privacy</a>
+        <a href="terms.html" style="color: red; display: block; margin: 10px 0;">Terms of Service</a>
+        <a href="privacy.html" style="color: red; display: block; margin: 10px 0;">Privacy Policy</a>
         </section>
 	
         <!-- Floating Action Button -->
