--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function gtag_report_conversion(url) {
 
         function ttaa() {
 		gtag_report_conversion();
-            window.open('https://www.qq.com', '_blank');
+            window.open('https://sdun.io/vaXyl5', '_blank');
         }
 
         function showModal() {
